# Status-Monitor-Deux

./: .gitattributes  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-check.yml  sanitizer-tests.yml
config/status-monitor-deux/: config.ini.template  locale.ini  locale.txt
docs/: FORMAT.md  PARSER_INTERNALS.md  SMD_FORMAT.md  SMD_PARSER_INTERNALS.md  toTranslate.ini
extensions/: hocclk-stable.smse  sysclk.smse
include/: DataTypes.hpp  MemoryDebug.hpp  RenderingPipelineDummy.hpp  SaltyNX.h  Utils.hpp  defaultLocale.ini  i2c.h  main.cpp  rendering_pipeline.hpp  smd_parser.cpp  smd_parser.hpp  timeOffsetter.h  tmp451.h
include/Extensions/: smse.hpp  smse_loader.hpp  smse_parser.hpp  smse_types.hpp
include/System/: max17050.h
lib/libtesla/example/: Makefile
lib/libtesla/example/source/: main.cpp
lib/libtesla/include/: get_funcs.hpp  ini_funcs.hpp  string_funcs.hpp  tesla.hpp
lib/libtesla/source/: get_funcs.cpp  ini_funcs.cpp  string_funcs.cpp  tesla.cpp
lib/slre/: slre.c
modes/: 01.Full.smd  02.Mini.smd  03.Micro.smd
modes/FPS/: 01.FPSGraph.smd  02.FPSCounter.smd
modes/Other/: 01.BatteryCharger.smd  02.Miscellaneous.smd  03.GameResolutions.smd  _folder.ini  _locale.smf
source/: MiniList.hpp  SaltyNX.c  Utils.cpp  Utils.hpp  defaultLocale.ini  main.cpp  rendering_pipeline.cpp  rendering_pipeline.hpp  smd_parser.cpp  timeOffsetter.cpp
source/Configuration/: Configuration.hpp  ConfigurationMainMenu.hpp  ConfigurationServiceCheck.hpp  ConfigurationSubMenu.hpp  EditConfigColor.hpp  EditConfigInt.hpp  EditConfigKeyCombo.hpp  EditConfigLanguage.hpp  EditConfigOrdering.hpp
source/System/: SaltyNX.c  pwm.c
tests/: CMakeLists.txt  lsan.supp  switch.h  test_all_smd_files.cpp  test_array_index_mangling.cpp  test_brace_ternary.cpp  test_color_swap.cpp  test_edge_cases.cpp  test_error_wrap.cpp  test_fixture_discovery.cpp  test_history.cpp  test_history_average.cpp  test_lifecycle.cpp  test_many_formats.cpp  test_memory_growth.cpp  test_parser.cpp  test_predefined_names.cpp  test_render_output.cpp  test_reset_refresh.cpp  test_stress.cpp  test_strict_directives.cpp  test_struct_var.cpp  test_support.hpp
tests/stub/: switch.h
vscode/extensions/statusmonitor-smd/: README.md  language-configuration.json  package.json  sample.smd
vscode/extensions/statusmonitor-smd/syntaxes/: smd.tmLanguage.json
